[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/icons/drag.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/massive_crisp_cabbage.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/Panels/PartyMenu/MonsterInfo/MonsterInfo.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="MonsterInfo" type="PanelContainer"]
margin_right = 360.0
margin_bottom = 62.0
size_flags_horizontal = 3
theme_type_variation = "PartyPanel"
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 360.0
margin_bottom = 75.0
custom_constants/margin_right = 17
custom_constants/margin_top = 13
custom_constants/margin_left = 17
custom_constants/margin_bottom = 13

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 17.0
margin_top = 13.0
margin_right = 343.0
margin_bottom = 62.0
custom_constants/separation = 7

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 49.0
rect_min_size = Vector2( 40, 40 )

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
grow_vertical = 0
rect_min_size = Vector2( 27, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )

[node name="MonsterIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 326.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 279.0
margin_bottom = 27.0
size_flags_horizontal = 11

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 279.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 279.0
margin_bottom = 17.0

[node name="MonsterName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 279.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = "LabelEncounterName"
text = "Monstermon"

[node name="TextureRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 228.0
margin_right = 248.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 0
color = Color( 1, 0, 0, 1 )

[node name="MonsterHealthBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 22.0
margin_right = 279.0
margin_bottom = 27.0
value = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 279.0
margin_bottom = 49.0

[node name="MonsterHealth" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 241.0
margin_bottom = 17.0
size_flags_horizontal = 3
theme_type_variation = "LabelEncounterName"
text = "100 / 100"

[node name="MonsterLevel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 245.0
margin_right = 279.0
margin_bottom = 17.0
theme_type_variation = "LabelEncounterName"
text = "Lv. 50"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 302.0
margin_right = 326.0
margin_bottom = 49.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
